# e-voting-core

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp
googletest/: CMakeLists.txt
src/: abstractSocket.h  abstractThread.h  abstractTopology.h  basicEncryptionService.cpp  basicEncryptionService.h  election.cpp  election.h  electionBuilder.cpp  electionBuilder.h  electionPrototype.h  inprocElectionboxThread.cpp  inprocElectionboxThread.h  interruptException.h  libSodiumEncryptionService.cpp  libSodiumEncryptionService.h  logger.h  main.cpp  networkPlan.h  peer.cpp  peer.h  replyKeyThread.cpp  replyKeyThread.h  straightLineDistributeThread.cpp  straightLineDistributeThread.h  straightLineSyncThread.cpp  straightLineSyncThread.h  straightLineTopDistributeThread.cpp  straightLineTopDistributeThread.h  straightLineTopology.cpp  straightLineTopology.h  zmqSocketAdapter.cpp  zmqSocketAdapter.h
src/crypt/: hkdf.c  hmac.c  sha-private.h  sha.h  sha1.c  sha224-256.c  sha384-512.c  usha.c
src/datasource/: inMemoryStorage.cpp  inMemoryStorage.h
src/evoting/: abstractTopology.cpp  basicEncryptionService.cpp  distributionService.cpp  distributionService.h  election.cpp  election.h  electionPrototype.h  electionService.cpp  electionService.h  hillEncryptionService.h  hillLengthException.h  inprocElectionboxThread.cpp  inprocElectionboxThread.h  logger.h  networkPlan.cpp  peer.cpp  peer.h  replyKeyThread.cpp  replyKeyThread.h  straightLineDistributeThread.cpp  straightLineDistributeThread.h  straightLineTopology.cpp  straightLineTopology.h  tallyService.cpp  tallyService.h  zmqSocketAdapter.h
src/evoting/model/: decentralElection.cpp  decentralElection.h  decentralNode.h  election.cpp  election.h  electionBuilder.cpp
src/evoting/service/: distributionService.cpp  distributionService.h  electionService.cpp  electionService.h  hashService.cpp  hashService.h  hillEncryptionService.cpp  hillEncryptionService.h  tallyService.cpp  tallyService.h
src/identity/: didConnectionService.cpp  didConnectionService.h  didDistributionService.cpp  didDistributionService.h  didSyncService.cpp  didSyncService.h  graphService.cpp  graphService.h  identityGraph.cpp  identityGraph.h  identityService.cpp  identityService.h  identityTest.cpp
src/network/: abstractSocket.h  connectionService.cpp  connectionService.h  socketMessage.h  syncService.cpp  syncService.h  zmqSocketAdapter.cpp  zmqSocketAdapter.h
test/: CMakeLists.txt  MockSocket.h  shatest.c  testDecentralNode.cpp  testDidConnectionService.cpp  testDidSyncService.cpp  testDistribution.cpp  testElectionLogic.cpp  testEncryption.cpp  testHashService.cpp  testHill.cpp  testIdentityService.cpp  testInprocElectionBox.cpp  testLibSodiumEncryptionService.cpp  testPeer.cpp  testStorage.cpp  testStraightLine.cpp
test/res/: didRegistry.json  didResources.json  receiveDidRegistry.json  receiveDidResources.json
